mongocxx-example/lib/served/request_parser.cpp

#line 1 "/home/vagrant/src/dev/src/request_parser.rl"
/*
 * Copyright (C) 2014 MediaSift Ltd.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

#include "served/request_parser.hpp"

#define LEN(AT, FPC) (FPC - buffer - AT)
#define MARK(M,FPC) (M = (FPC) - buffer)
#define PTR_TO(F) (buffer + F)

using namespace served;

/** Machine **/


#line 37 "/home/vagrant/src/dev/src/request_parser.cpp"
static const int request_parser_start = 1;
static const int request_parser_first_final = 194;
static const int request_parser_error = 0;

static const int request_parser_en_main = 1;


#line 224 "/home/vagrant/src/dev/src/request_parser.rl"


request_parser::request_parser()
	: cs(0)
	, d_offset(0)
{
	// Ragel generates an unused constant for the entry point.
	// The following will suppress the resulting warning.
	(void) request_parser_en_main;

#line 53 "/home/vagrant/src/dev/src/request_parser.cpp"
	{
	cs = request_parser_start;
	}

#line 231 "/home/vagrant/src/dev/src/request_parser.rl"
}

request_parser::~request_parser()
{}

size_t
request_parser::execute(const char *buffer, size_t len)
{
	//int    content_len;
	size_t nread = 0;
	size_t mark = 0;
	size_t field_start = 0;
	size_t field_len = 0;
	size_t query_start = 0;

	if(len == 0) return 0;

	const char *p  = buffer+d_offset;
	const char *pe = buffer+len;


#line 80 "/home/vagrant/src/dev/src/request_parser.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto tr0;
	} else if ( (*p) >= 48 )
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 106 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) == 32 )
		goto tr2;
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st175;
	} else if ( (*p) >= 48 )
		goto st175;
	goto st0;
tr2:
#line 62 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_method(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 125 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr4;
		case 33: goto tr5;
		case 35: goto tr6;
		case 37: goto tr7;
		case 47: goto tr8;
		case 59: goto tr5;
		case 61: goto tr5;
		case 63: goto tr9;
		case 64: goto tr5;
		case 95: goto tr5;
		case 126: goto tr5;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 57 )
			goto tr5;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr10;
	} else
		goto tr10;
	goto st0;
tr4:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
#line 92 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_path(buffer, PTR_TO(mark), LEN(mark,p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st4;
tr35:
#line 92 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_path(buffer, PTR_TO(mark), LEN(mark,p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st4;
tr41:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
#line 72 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		fragment(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st4;
tr44:
#line 72 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		fragment(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st4;
tr51:
#line 77 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(query_start, p);
	}
#line 82 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		query_string(buffer, PTR_TO(query_start), LEN(query_start, p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st4;
tr55:
#line 82 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		query_string(buffer, PTR_TO(query_start), LEN(query_start, p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 216 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) == 72 )
		goto tr11;
	goto st0;
tr11:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 230 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) == 84 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 84 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 80 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 47 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 49 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 46 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( 48 <= (*p) && (*p) <= 49 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 10: goto tr19;
		case 13: goto tr20;
	}
	goto st0;
tr19:
#line 87 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		http_version(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st13;
tr28:
#line 52 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
#line 57 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		http_field(buffer, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
	}
	goto st13;
tr31:
#line 57 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		http_field(buffer, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
	}
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 311 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr22;
		case 13: goto tr23;
		case 33: goto tr21;
		case 124: goto tr21;
		case 126: goto tr21;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 11 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto tr21;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto tr21;
		} else
			goto tr21;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto tr21;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto tr21;
			} else if ( (*p) >= 65 )
				goto tr21;
		} else
			goto tr21;
	} else
		goto tr21;
	goto st0;
tr21:
#line 42 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(field_start, p);
	}
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 353 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 33: goto st14;
		case 58: goto tr25;
		case 124: goto st14;
		case 126: goto st14;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 10 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto st14;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto st14;
		} else
			goto st14;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st14;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto st14;
			} else if ( (*p) >= 65 )
				goto st14;
		} else
			goto st14;
	} else
		goto st14;
	goto st0;
tr25:
#line 47 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		field_len = LEN(field_start, p);
	}
	goto st15;
tr27:
#line 52 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 400 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 0: goto st0;
		case 9: goto tr27;
		case 10: goto tr28;
		case 13: goto tr29;
		case 32: goto tr27;
		case 127: goto st0;
	}
	goto tr26;
tr26:
#line 52 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 420 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 0: goto st0;
		case 10: goto tr31;
		case 13: goto tr32;
		case 127: goto st0;
	}
	goto st16;
tr20:
#line 87 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		http_version(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st17;
tr29:
#line 52 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
#line 57 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		http_field(buffer, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
	}
	goto st17;
tr32:
#line 57 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		http_field(buffer, PTR_TO(field_start), field_len, PTR_TO(mark), LEN(mark, p));
	}
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 454 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) == 10 )
		goto st13;
	goto st0;
tr22:
#line 42 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(field_start, p);
	}
#line 97 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		header_done(buffer, p + 1, pe - p - 1);
		{p++; cs = 194; goto _out;}
	}
	goto st194;
tr34:
#line 97 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		header_done(buffer, p + 1, pe - p - 1);
		{p++; cs = 194; goto _out;}
	}
	goto st194;
st194:
	if ( ++p == pe )
		goto _test_eof194;
case 194:
#line 480 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 33: goto st14;
		case 58: goto tr25;
		case 124: goto st14;
		case 126: goto st14;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 10 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto st14;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto st14;
		} else
			goto st14;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st14;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto st14;
			} else if ( (*p) >= 65 )
				goto st14;
		} else
			goto st14;
	} else
		goto st14;
	goto st0;
tr23:
#line 42 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(field_start, p);
	}
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 521 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 10: goto tr34;
		case 33: goto st14;
		case 58: goto tr25;
		case 124: goto st14;
		case 126: goto st14;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 11 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto st14;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto st14;
		} else
			goto st14;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st14;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto st14;
			} else if ( (*p) >= 65 )
				goto st14;
		} else
			goto st14;
	} else
		goto st14;
	goto st0;
tr5:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 563 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr35;
		case 33: goto st19;
		case 35: goto tr37;
		case 37: goto st24;
		case 47: goto st26;
		case 59: goto st19;
		case 61: goto st19;
		case 63: goto tr40;
		case 95: goto st19;
		case 126: goto st19;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 57 )
			goto st19;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st19;
	} else
		goto st19;
	goto st0;
tr6:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
#line 92 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_path(buffer, PTR_TO(mark), LEN(mark,p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st20;
tr37:
#line 92 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_path(buffer, PTR_TO(mark), LEN(mark,p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st20;
tr53:
#line 77 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(query_start, p);
	}
#line 82 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		query_string(buffer, PTR_TO(query_start), LEN(query_start, p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st20;
tr57:
#line 82 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		query_string(buffer, PTR_TO(query_start), LEN(query_start, p));
	}
#line 67 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_uri(buffer, PTR_TO(mark), LEN(mark, p));
	}
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 637 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr41;
		case 33: goto tr42;
		case 37: goto tr43;
		case 61: goto tr42;
		case 95: goto tr42;
		case 126: goto tr42;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr42;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr42;
	} else
		goto tr42;
	goto st0;
tr42:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 665 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr44;
		case 33: goto st21;
		case 37: goto st22;
		case 61: goto st21;
		case 95: goto st21;
		case 126: goto st21;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st21;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st21;
	} else
		goto st21;
	goto st0;
tr43:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 693 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st23;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st23;
	} else
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st21;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st21;
	} else
		goto st21;
	goto st0;
tr7:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 726 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st25;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st25;
	} else
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st19;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st0;
tr201:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
#line 759 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr35;
		case 33: goto st26;
		case 35: goto tr37;
		case 37: goto st27;
		case 61: goto st26;
		case 63: goto tr40;
		case 95: goto st26;
		case 126: goto st26;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st26;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st26;
	} else
		goto st26;
	goto st0;
tr202:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 789 "/home/vagrant/src/dev/src/request_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st28;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st28;
	} else
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st26;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st26;
	} else
		goto st26;
	goto st0;
tr9:
#line 37 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(mark, p);
	}
#line 92 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_path(buffer, PTR_TO(mark), LEN(mark,p));
	}
	goto st29;
tr40:
#line 92 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		request_path(buffer, PTR_TO(mark), LEN(mark,p));
	}
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 832 "/home/vagrant/src/dev/src/request_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr51;
		case 33: goto tr52;
		case 35: goto tr53;
		case 37: goto tr54;
		case 61: goto tr52;
		case 95: goto tr52;
		case 126: goto tr52;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr52;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr52;
	} else
		goto tr52;
	goto st0;
tr52:
#line 77 "/home/vagrant/src/dev/src/request_parser.rl"
	{
		MARK(query_start, p);
	}
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 861 "/home/vagrant/src/dev/src/request_parser.cpp"
